Issue #20037: Avoid crashes when doing text I/O late at interpreter shutdown.